--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/temp02.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=big5" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf8" />
 <!-- InstanceBeginEditable name="doctitle" -->
 <title>社團法人中華食品危害分析與重點管制系統學會首頁</title>
 <!-- InstanceEndEditable -->
