Convert to UTF-8

--- a/counseling.htm
+++ b/counseling.htm
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=big5" />
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>haccp»²¾É»{ÃÒ</title>
+<title>haccpè¼”å°Žèªè­‰</title>
 <!-- InstanceEndEditable -->
 <script type="text/javascript">
 <!--
@@ -42,7 +42,7 @@ function MM_swapImage() { //v3.0
 <style type="text/css">
 <!--
 body,td,th {
-	font-family: ¼Ð·¢Åé;
+	font-family: æ¨™æ¥·é«”;
 	font-size: 18px;
 }
 h1 {
@@ -53,7 +53,7 @@ h4 {
 	font-size: 1em;
 }
 a {
-	font-family: ¼Ð·¢Åé;
+	font-family: æ¨™æ¥·é«”;
 	color: #00F;
 }
 a:hover {
@@ -94,10 +94,10 @@ a:active {
       </tr>
       <tr>
         <td colspan="2">&nbsp;</td>
-        <td width="188" align="center"><a href="index.htm">¦^­º­¶</a></td>
-        <td width="188" align="center"><a href="member.htm">·|­û±M°Ï</a></td>
-        <td width="188" align="center"><a href="navigation.htm">ºô¯¸¾ÉÄý</a></td>
-        <td width="150" align="center"><a href="traffic.htm">¥æ³q¸ê°T</a></td>
+        <td width="188" align="center"><a href="index.htm">å›žé¦–é </a></td>
+        <td width="188" align="center"><a href="member.htm">æœƒå“¡å°ˆå€</a></td>
+        <td width="188" align="center"><a href="navigation.htm">ç¶²ç«™å°Žè¦½</a></td>
+        <td width="150" align="center"><a href="traffic.htm">äº¤é€šè³‡è¨Š</a></td>
       </tr>
       <tr>
         <td colspan="6"><hr /></td>
@@ -120,17 +120,17 @@ a:active {
             <td align="center"><a href="download.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image9','','images/005-1.jpg',0)"><img src="images/005.jpg" name="Image9" width="104" height="40" border="0" id="Image9" /></a></td>
           </tr>
           <tr>
-            <td align="center"><a href="mailto:haccp.tw@msa.hinet.net?subject=³X«È¨Ó«H"><img src="images/G-bridmail.gif" width="46" height="56" /></a></td>
+            <td align="center"><a href="mailto:haccp.tw@msa.hinet.net?subject=è¨ªå®¢ä¾†ä¿¡"><img src="images/G-bridmail.gif" width="46" height="56" /></a></td>
           </tr>
           <tr>
-            <td align="center"><h5>§ó·s¤é´Á:</h5>
+            <td align="center"><h5>æ›´æ–°æ—¥æœŸ:</h5>
               <h5>
-                <!-- #BeginDate format:Ch2 -->2020¦~3¤ë25¤é <!-- #EndDate -->              
+                <!-- #BeginDate format:Ch2 -->2020å¹´3æœˆ25æ—¥ <!-- #EndDate -->              
                 <br />
               </h5></td>
           </tr>
         </table></td>
-        <td colspan="5" valign="top"><!-- InstanceBeginEditable name="¤º¤å" -->¤º¤å<!-- InstanceEndEditable --></td>
+        <td colspan="5" valign="top"><!-- InstanceBeginEditable name="å…§æ–‡" -->å…§æ–‡<!-- InstanceEndEditable --></td>
         </tr>
       <tr>
         <td colspan="6"><hr /></td>
@@ -138,8 +138,8 @@ a:active {
     </table></td>
   </tr>
   <tr bgcolor="#6699FF">
-    <td align="center" bgcolor="#FFFFCC"><p>ªÀ¹Îªk¤H¤¤µØ­¹«~¦M®`¤ÀªR»P­«ÂIºÞ¨î¨t²Î¾Ç·|</p>
-    <p>¦a§}<a href="¥X¯²ºñ¤tÀu½è®M©Ð ªñ¥x¤¤¤õ¨®¯¸.htm">:</a>81167°ª¶¯¥«·£±ê°Ï·ç«Ì¸ô60<a href="¥X¯²ºñ¤tÀu½è®M©Ð ªñ¥x¤¤¤õ¨®¯¸.pdf">-</a>2¸¹  ¹q¸Ü<a href="¥X¯²ºñ¤tÀu½è®M©Ð ªñ¥x¤¤¤õ¨®¯¸.pdf">:</a>07-3633256 ¶Ç¯u<a href="¥X¯²ºñ¤tÀu½è®M©Ð ªñ¥x¤¤¤õ¨®¯¸.htm">:</a>07-3661272</p>
+    <td align="center" bgcolor="#FFFFCC"><p>ç¤¾åœ˜æ³•äººä¸­è¯é£Ÿå“å±å®³åˆ†æžèˆ‡é‡é»žç®¡åˆ¶ç³»çµ±å­¸æœƒ</p>
+    <p>åœ°å€<a href="å‡ºç§Ÿç¶ å·å„ªè³ªå¥—æˆ¿ è¿‘å°ä¸­ç«è»Šç«™.htm">:</a>81167é«˜é›„å¸‚æ¥ æ¢“å€ç‘žå±è·¯60<a href="å‡ºç§Ÿç¶ å·å„ªè³ªå¥—æˆ¿ è¿‘å°ä¸­ç«è»Šç«™.pdf">-</a>2è™Ÿ  é›»è©±<a href="å‡ºç§Ÿç¶ å·å„ªè³ªå¥—æˆ¿ è¿‘å°ä¸­ç«è»Šç«™.pdf">:</a>07-3633256 å‚³çœŸ<a href="å‡ºç§Ÿç¶ å·å„ªè³ªå¥—æˆ¿ è¿‘å°ä¸­ç«è»Šç«™.htm">:</a>07-3661272</p>
 <p>E<a href="Untitled--591.htm">-</a>mail:haccp.tw@msa.hinet.net</p></td>
   </tr>
 </table>
