--- a/member.htm
+++ b/member.htm
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=big5" />
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>haccp¾Ç·|</title>
+<title>haccpå­¸æœƒ</title>
 <!-- InstanceEndEditable -->
 <script type="text/javascript">
 <!--
@@ -55,16 +55,16 @@ a:active {
 	text-decoration: none;
 	color: #D6D6D6;
 	font-size: 0.7em;
-	font-family: "¼Ð·¢Åé";
+	font-family: "æ¨™æ¥·é«”";
 }
 -->
 </style><style type="text/css">
 <!--
 body,td,th {
-	font-family: ¼Ð·¢Åé;
+	font-family: æ¨™æ¥·é«”;
 }
 a {
-	font-family: ¼Ð·¢Åé;
+	font-family: æ¨™æ¥·é«”;
 }
 -->
 </style>
@@ -73,14 +73,14 @@ a {
 <style type="text/css">
 <!--
 h1,h2,h3,h4,h5,h6 {
-	font-family: ¼Ð·¢Åé;
+	font-family: æ¨™æ¥·é«”;
 }
 -->
 </style><!-- InstanceEndEditable -->
 <style type="text/css">
 <!--
 body,td,th {
-	font-family: ¼Ð·¢Åé;
+	font-family: æ¨™æ¥·é«”;
 	font-size: 18px;
 }
 h1 {
@@ -91,7 +91,7 @@ h4 {
 	font-size: 1em;
 }
 a {
-	font-family: ¼Ð·¢Åé;
+	font-family: æ¨™æ¥·é«”;
 	color: #00F;
 }
 a:hover {
@@ -132,10 +132,10 @@ a:active {
       </tr>
       <tr>
         <td colspan="2">&nbsp;</td>
-        <td width="188" align="center"><a href="index.htm">¦^­º­¶</a></td>
-        <td width="188" align="center"><a href="member.htm">·|­û±M°Ï</a></td>
-        <td width="188" align="center"><a href="navigation.htm">ºô¯¸¾ÉÄý</a></td>
-        <td width="150" align="center"><a href="traffic.htm">¥æ³q¸ê°T</a></td>
+        <td width="188" align="center"><a href="index.htm">å›žé¦–é </a></td>
+        <td width="188" align="center"><a href="member.htm">æœƒå“¡å°ˆå€</a></td>
+        <td width="188" align="center"><a href="navigation.htm">ç¶²ç«™å°Žè¦½</a></td>
+        <td width="150" align="center"><a href="traffic.htm">äº¤é€šè³‡è¨Š</a></td>
       </tr>
       <tr>
         <td colspan="6"><hr /></td>
@@ -158,50 +158,50 @@ a:active {
             <td align="center"><a href="download.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image9','','images/005-1.jpg',0)"><img src="images/005.jpg" name="Image9" width="104" height="40" border="0" id="Image9" /></a></td>
           </tr>
           <tr>
-            <td align="center"><a href="mailto:haccp.tw@msa.hinet.net?subject=³X«È¨Ó«H"><img src="images/G-bridmail.gif" width="46" height="56" /></a></td>
+            <td align="center"><a href="mailto:haccp.tw@msa.hinet.net?subject=è¨ªå®¢ä¾†ä¿¡"><img src="images/G-bridmail.gif" width="46" height="56" /></a></td>
           </tr>
           <tr>
-            <td align="center"><h5>§ó·s¤é´Á:</h5>
+            <td align="center"><h5>æ›´æ–°æ—¥æœŸ:</h5>
               <h5>
-                <!-- #BeginDate format:Ch2 -->2020¦~4¤ë17¤é <!-- #EndDate -->              
+                <!-- #BeginDate format:Ch2 -->2020å¹´4æœˆ17æ—¥ <!-- #EndDate -->              
                 <br />
               </h5></td>
           </tr>
         </table></td>
-        <td colspan="5" valign="top"><!-- InstanceBeginEditable name="¤º¤å" -->
-          <h2>·|­û±M°Ï</h2>
+        <td colspan="5" valign="top"><!-- InstanceBeginEditable name="å…§æ–‡" -->
+          <h2>æœƒå“¡å°ˆå€</h2>
           <div id="CollapsiblePanel3" class="CollapsiblePanel">
-            <div class="CollapsiblePanelTab" tabindex="0">·|­û¤¤¤ß</div>
+            <div class="CollapsiblePanelTab" tabindex="0">æœƒå“¡ä¸­å¿ƒ</div>
             <div class="CollapsiblePanelContent">
               <p>&nbsp;</p>
-              <p><span style="letter-spacing:-1.5pt; font-family:¼Ð·¢Åé; font-size:14.0pt; "><a href="download/4A.doc" target="_blank"><img src="images/afile.gif" width="16" height="16" />­¹«~¦w¥þºÞ¨î¨t²Î¤p²Õ¦¨­û«ùÄò±Ð¨|¯Z­Ó¤H·|­û³ø¦Wªí</a></span></p>
-              <p><span style="letter-spacing:-1.5pt; font-family:¼Ð·¢Åé; font-size:14.0pt; "><a href="download/4AA.doc" target="_blank"><img src="images/afile.gif" width="16" height="16" />­¹«~¦w¥þºÞ¨î¨t²Î¤p²Õ¦¨­û«ùÄò±Ð¨|¯Z¹ÎÅé·|­û³ø¦Wªí</a></span>              </p>
+              <p><span style="letter-spacing:-1.5pt; font-family:æ¨™æ¥·é«”; font-size:14.0pt; "><a href="download/4A.doc" target="_blank"><img src="images/afile.gif" width="16" height="16" />é£Ÿå“å®‰å…¨ç®¡åˆ¶ç³»çµ±å°çµ„æˆå“¡æŒçºŒæ•™è‚²ç­å€‹äººæœƒå“¡å ±åè¡¨</a></span></p>
+              <p><span style="letter-spacing:-1.5pt; font-family:æ¨™æ¥·é«”; font-size:14.0pt; "><a href="download/4AA.doc" target="_blank"><img src="images/afile.gif" width="16" height="16" />é£Ÿå“å®‰å…¨ç®¡åˆ¶ç³»çµ±å°çµ„æˆå“¡æŒçºŒæ•™è‚²ç­åœ˜é«”æœƒå“¡å ±åè¡¨</a></span>              </p>
               <p>&nbsp;</p>
             </div>
           </div>
           <div id="CollapsiblePanel4" class="CollapsiblePanel">
-            <div class="CollapsiblePanelTab" tabindex="0">·|­û¦W¿ý</div>
+            <div class="CollapsiblePanelTab" tabindex="0">æœƒå“¡åéŒ„</div>
             <div class="CollapsiblePanelContent">
-              <h3><a href="download/a1.a2.doc" target="_blank">²Ä2©¡²Ä2¦¸·|­û¥Nªí¤j·|·|­û¦W¥U</a></h3>
+              <h3><a href="download/a1.a2.doc" target="_blank">ç¬¬2å±†ç¬¬2æ¬¡æœƒå“¡ä»£è¡¨å¤§æœƒæœƒå“¡åå†Š</a></h3>
             </div>
           </div>
           <div id="CollapsiblePanel1" class="CollapsiblePanel">
-            <div class="CollapsiblePanelTab" tabindex="0"> <a href="member3.htm">·|­û¥Nªí¤j·|·|Ä³°O¿ý</a>            </div>
+            <div class="CollapsiblePanelTab" tabindex="0"> <a href="member3.htm">æœƒå“¡ä»£è¡¨å¤§æœƒæœƒè­°è¨˜éŒ„</a>            </div>
             <div class="CollapsiblePanelContent">
               <form id="form1" onsubmit="return FieldCheck(this);" method="post" name="form1" action="./?&amp;m=99&amp;m1=4&amp;m2=220&amp;gp=&amp;sid=">
-                <h3><a href="download/2.1.b.doc" target="_blank">²Ä¤G©¡²Ä1¦¸·|­û¥Nªí¤j·|·|Ä³°O¿ý(100.10.1)</a></h3>
-                <h3><a href="download/2.2.b.doc" target="_blank">²Ä¤G©¡²Ä2¦¸·|­û¥Nªí¤j·|·|Ä³°O¿ý(101.12.23)</a></h3>
+                <h3><a href="download/2.1.b.doc" target="_blank">ç¬¬äºŒå±†ç¬¬1æ¬¡æœƒå“¡ä»£è¡¨å¤§æœƒæœƒè­°è¨˜éŒ„(100.10.1)</a></h3>
+                <h3><a href="download/2.2.b.doc" target="_blank">ç¬¬äºŒå±†ç¬¬2æ¬¡æœƒå“¡ä»£è¡¨å¤§æœƒæœƒè­°è¨˜éŒ„(101.12.23)</a></h3>
               </form>
             </div>
           </div>
           <div id="CollapsiblePanel2" class="CollapsiblePanel">
-            <div class="CollapsiblePanelTab" tabindex="0"><a href="member4.htm">²zºÊ¨ÆÁp®u·|Ä³·|Ä³°O¿ý</a></div>
+            <div class="CollapsiblePanelTab" tabindex="0"><a href="member4.htm">ç†ç›£äº‹è¯å¸­æœƒè­°æœƒè­°è¨˜éŒ„</a></div>
             <div class="CollapsiblePanelContent">
-              <h3><a href="download/2.1.a.doc" target="_blank">²Ä¤G©¡²Ä1¦¸²zºÊ¨ÆÁp®u·|Ä³·|Ä³°O¿ý (100.10.1)</a></h3>
-              <h3><a href="download/2.2.a.doc" target="_blank">²Ä¤G©¡²Ä2¦¸²zºÊ¨ÆÁp®u·|Ä³·|Ä³°O¿ý (100.11.5)</a></h3>
-              <h3><a href="download/2.3.a.doc" target="_blank">²Ä¤G©¡²Ä3¦¸²zºÊ¨ÆÁp®u·|Ä³·|Ä³°O¿ý (101.7.7)</a></h3>
-              <h3><a href="download/2.4.a.doc" target="_blank">²Ä¤G©¡²Ä4¦¸²zºÊ¨ÆÁp®u·|Ä³·|Ä³°O¿ý (101.12.9)</a></h3>
-              <h3><a href="download/2.5.a.doc" target="_blank">²Ä¤G©¡²Ä5¦¸²zºÊ¨ÆÁp®u·|Ä³·|Ä³°O¿ý (102.8.17)</a></h3>
+              <h3><a href="download/2.1.a.doc" target="_blank">ç¬¬äºŒå±†ç¬¬1æ¬¡ç†ç›£äº‹è¯å¸­æœƒè­°æœƒè­°è¨˜éŒ„ (100.10.1)</a></h3>
+              <h3><a href="download/2.2.a.doc" target="_blank">ç¬¬äºŒå±†ç¬¬2æ¬¡ç†ç›£äº‹è¯å¸­æœƒè­°æœƒè­°è¨˜éŒ„ (100.11.5)</a></h3>
+              <h3><a href="download/2.3.a.doc" target="_blank">ç¬¬äºŒå±†ç¬¬3æ¬¡ç†ç›£äº‹è¯å¸­æœƒè­°æœƒè­°è¨˜éŒ„ (101.7.7)</a></h3>
+              <h3><a href="download/2.4.a.doc" target="_blank">ç¬¬äºŒå±†ç¬¬4æ¬¡ç†ç›£äº‹è¯å¸­æœƒè­°æœƒè­°è¨˜éŒ„ (101.12.9)</a></h3>
+              <h3><a href="download/2.5.a.doc" target="_blank">ç¬¬äºŒå±†ç¬¬5æ¬¡ç†ç›£äº‹è¯å¸­æœƒè­°æœƒè­°è¨˜éŒ„ (102.8.17)</a></h3>
             </div>
           </div>
           <p>&nbsp;</p>
@@ -221,8 +221,8 @@ var CollapsiblePanel4 = new Spry.Widget.CollapsiblePanel("CollapsiblePanel4", {c
     </table></td>
   </tr>
   <tr bgcolor="#6699FF">
-    <td align="center" bgcolor="#FFFFCC"><p>ªÀ¹Îªk¤H¤¤µØ­¹«~¦M®`¤ÀªR»P­«ÂIºÞ¨î¨t²Î¾Ç·|</p>
-    <p>¦a§}:81167°ª¶¯¥«·£±ê°Ï·ç«Ì¸ô60-2¸¹  ¹q¸Ü:07-3633256 ¶Ç¯u:07-3661272</p>
+    <td align="center" bgcolor="#FFFFCC"><p>ç¤¾åœ˜æ³•äººä¸­è¯é£Ÿå“å±å®³åˆ†æžèˆ‡é‡é»žç®¡åˆ¶ç³»çµ±å­¸æœƒ</p>
+    <p>åœ°å€:81167é«˜é›„å¸‚æ¥ æ¢“å€ç‘žå±è·¯60-2è™Ÿ  é›»è©±:07-3633256 å‚³çœŸ:07-3661272</p>
 <p>E-mail:haccp.tw@msa.hinet.net</p></td>
   </tr>
 </table>
