--- a/member4.htm
+++ b/member4.htm
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=big5" />
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>╓╓╣ь╜╧╚~╕M╝`╓ю╙R╩P╜╚бI╨ч╗Н╗t╡н╬г╥|</title>
+<title>Д╦╜Х▐╞Иё÷Е⌠│Е█╠Е╝ЁЕ┬├Ф·░Х┬┤И┤█И╩·Г╝║Е┬╤ГЁ╩Г╣╠Е╜╦Ф°┐</title>
 <!-- InstanceEndEditable -->
 <script type="text/javascript">
 <!--
@@ -38,13 +38,13 @@ function MM_swapImage() { //v3.0
 <style type="text/css">
 <!--
 body,td,th {
-	font-family: ╪п╥╒еИ;
+	font-family: Ф╗≥Ф╔╥И╚■;
 }
 -->
 </style><style type="text/css">
 <!--
 a {
-	font-family: ╪п╥╒еИ;
+	font-family: Ф╗≥Ф╔╥И╚■;
 }
 -->
 </style><style type="text/css">
@@ -67,14 +67,14 @@ a:active {
 </style><style type="text/css">
 <!--
 h1,h2,h3,h4,h5,h6 {
-	font-family: ╪п╥╒еИ;
+	font-family: Ф╗≥Ф╔╥И╚■;
 }
 -->
 </style><!-- InstanceEndEditable -->
 <style type="text/css">
 <!--
 body,td,th {
-	font-family: ╪п╥╒еИ;
+	font-family: Ф╗≥Ф╔╥И╚■;
 	font-size: 18px;
 }
 h1 {
@@ -85,7 +85,7 @@ h4 {
 	font-size: 1em;
 }
 a {
-	font-family: ╪п╥╒еИ;
+	font-family: Ф╗≥Ф╔╥И╚■;
 	color: #00F;
 }
 a:hover {
@@ -126,10 +126,10 @@ a:active {
       </tr>
       <tr>
         <td colspan="2">&nbsp;</td>
-        <td width="188" align="center"><a href="index.htm">╕^╜╨╜╤</a></td>
-        <td width="188" align="center"><a href="member.htm">╥|╜Ш╠M╟о</a></td>
-        <td width="188" align="center"><a href="navigation.htm">╨Т╞╦╬идЩ</a></td>
-        <td width="150" align="center"><a href="traffic.htm">╔ФЁq╦Й╟T</a></td>
+        <td width="188" align="center"><a href="index.htm">Е⌡·И╕√И═│</a></td>
+        <td width="188" align="center"><a href="member.htm">Ф°┐Е⌠║Е╟┬Е█─</a></td>
+        <td width="188" align="center"><a href="navigation.htm">Г╤╡Г╚≥Е╟▌Х╕╫</a></td>
+        <td width="150" align="center"><a href="traffic.htm">Д╨╓И─ ХЁ┤Х╗┼</a></td>
       </tr>
       <tr>
         <td colspan="6"><hr /></td>
@@ -152,30 +152,30 @@ a:active {
             <td align="center"><a href="download.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image9','','images/005-1.jpg',0)"><img src="images/005.jpg" name="Image9" width="104" height="40" border="0" id="Image9" /></a></td>
           </tr>
           <tr>
-            <td align="center"><a href="mailto:haccp.tw@msa.hinet.net?subject=ЁX╚х╗с╚H"><img src="images/G-bridmail.gif" width="46" height="56" /></a></td>
+            <td align="center"><a href="mailto:haccp.tw@msa.hinet.net?subject=Х╗╙Е╝╒Д╬├Д©║"><img src="images/G-bridmail.gif" width="46" height="56" /></a></td>
           </tr>
           <tr>
-            <td align="center"><h5>╖С╥s╓И╢а:</h5>
+            <td align="center"><h5>Ф⌡╢Ф√╟Ф≈╔Ф°÷:</h5>
               <h5>
-                <!-- #BeginDate format:Ch2 -->2020╕~4╓К17╓И <!-- #EndDate -->              
+                <!-- #BeginDate format:Ch2 -->2020Е╧╢4Ф°┬17Ф≈╔ <!-- #EndDate -->              
                 <br />
               </h5></td>
           </tr>
         </table></td>
-        <td colspan="5" valign="top"><!-- InstanceBeginEditable name="╓╨╓Е" -->
+        <td colspan="5" valign="top"><!-- InstanceBeginEditable name="Е┘╖Ф√┤" -->
           <form id="form1" onsubmit="return FieldCheck(this);" method="post" name="form1" action="./?&amp;m=99&amp;m1=4&amp;m2=220&amp;gp=&amp;sid=">
-            <h2>╡z╨й╗фаp╝u╥|дЁ╥|дЁ╟O©Щ
+            <h2>Г░├Г⌡ёД╨▀Х│╞Е╦╜Ф°┐Х╜╟Ф°┐Х╜╟Х╗≤И▄└
             </h2>
-            <h3><a href="download/╡д╓G╘║╡д1╕╦╡z╨й╗фаp╝u╥|дЁ╥|дЁ╛Ж©Щ1001001.doc">╡д╓G╘║╡д1╕╦╡z╨й╗фаp╝u╥|дЁ╥|дЁ╟O©Щ (100.10.1)</a></h3>
-            <h3><a href="download/╡д╓G╘║╡д2╕╦╡z╨й╗фаp╝u╥|дЁ╥|дЁ╛Ж©Щ.doc">╡д╓G╘║╡д2╕╦╡z╨й╗фаp╝u╥|дЁ╥|дЁ╟O©Щ (100.11.5)</a></h3>
-            <h3><a href="download/╡д╓G╘║╡д3╕╦╡z╨й╗фаp╝u╥|дЁ╥|дЁ╛Ж©Щ(╕s).doc">╡д╓G╘║╡д3╕╦╡z╨й╗фаp╝u╥|дЁ╥|дЁ╟O©Щ (101.7.7)</a></h3>
-            <h3><a href="download/╡д╓G╘║╡д4╕╦╡z╨й╗фаp╝u╥|дЁ╥|дЁ╛Ж©Щ(╕s).doc">╡д╓G╘║╡д4╕╦╡z╨й╗фаp╝u╥|дЁ╥|дЁ╟O©Щ (101.12.9)</a></h3>
-            <h3><a href="download/╡д╓G╘║╡д5╕╦╡z╨й╗фаp╝u╥|дЁ╥|дЁ╛Ж©Щ(╕s).doc">╡д╓G╘║╡д5╕╦╡z╨й╗фаp╝u╥|дЁ╥|дЁ╟O©Щ (102.8.17)</a></h3>
-            <h3><a href="file:///F|/╬Ц╡z/╬г╥|/╤}╥|/1021116╡д╓G╘║╡д6╕╦╡z╨й╗ф╥|дЁ/╡д╓G╘║╡д6╕╦╡z╨й╗фаp╝u╥|дЁ╥|дЁ╛Ж©Щ(╕s).doc">╡д╓G╘║╡д6╕╦╡z╨й╗фаp╝u╥|дЁ╥|дЁ╟O©Щ (102.11.16)</a></h3>
-            <h3><a href="download/╡д╓G╘║╡д5╕╦╡z╨й╗фаp╝u╥|дЁ╥|дЁ╛Ж©Щ(╕s).doc">╡д╓G╘║╡д7╕╦╡z╨й╗фаp╝u╥|дЁ╥|дЁ╟O©Щ (102.12.21)</a></h3>
-            <h3><a href="download/╡д╓G╘║╡д5╕╦╡z╨й╗фаp╝u╥|дЁ╥|дЁ╛Ж©Щ(╕s).doc">╡д╓G╘║╡д8╕╦╡z╨й╗фаp╝u╥|дЁ╥|дЁ╟O©Щ (103.6.14)</a></h3>
-            <h3><a href="download/╡д╓G╘║╡д5╕╦╡z╨й╗фаp╝u╥|дЁ╥|дЁ╛Ж©Щ(╕s).doc">╡д╓G╘║╡д9╕╦╡z╨й╗фаp╝u╥|дЁ╥|дЁ╟O©Щ (103.11.30)</a></h3>
-            <h3><a href="download/╡д╓G╘║╡д5╕╦╡z╨й╗фаp╝u╥|дЁ╥|дЁ╛Ж©Щ(╕s).doc">╡д╓T╘║╡д1╕╦╡z╨й╗фаp╝u╥|дЁ╥|дЁ╟O©Щ (103.12.21)</a></h3>
+            <h3><a href="download/Г╛╛Д╨▄Е╠├Г╛╛1Ф╛║Г░├Г⌡ёД╨▀Х│╞Е╦╜Ф°┐Х╜╟Ф°┐Х╜╟Г╢─И▄└1001001.doc">Г╛╛Д╨▄Е╠├Г╛╛1Ф╛║Г░├Г⌡ёД╨▀Х│╞Е╦╜Ф°┐Х╜╟Ф°┐Х╜╟Х╗≤И▄└ (100.10.1)</a></h3>
+            <h3><a href="download/Г╛╛Д╨▄Е╠├Г╛╛2Ф╛║Г░├Г⌡ёД╨▀Х│╞Е╦╜Ф°┐Х╜╟Ф°┐Х╜╟Г╢─И▄└.doc">Г╛╛Д╨▄Е╠├Г╛╛2Ф╛║Г░├Г⌡ёД╨▀Х│╞Е╦╜Ф°┐Х╜╟Ф°┐Х╜╟Х╗≤И▄└ (100.11.5)</a></h3>
+            <h3><a href="download/Г╛╛Д╨▄Е╠├Г╛╛3Ф╛║Г░├Г⌡ёД╨▀Х│╞Е╦╜Ф°┐Х╜╟Ф°┐Х╜╟Г╢─И▄└(Е╜≤).doc">Г╛╛Д╨▄Е╠├Г╛╛3Ф╛║Г░├Г⌡ёД╨▀Х│╞Е╦╜Ф°┐Х╜╟Ф°┐Х╜╟Х╗≤И▄└ (101.7.7)</a></h3>
+            <h3><a href="download/Г╛╛Д╨▄Е╠├Г╛╛4Ф╛║Г░├Г⌡ёД╨▀Х│╞Е╦╜Ф°┐Х╜╟Ф°┐Х╜╟Г╢─И▄└(Е╜≤).doc">Г╛╛Д╨▄Е╠├Г╛╛4Ф╛║Г░├Г⌡ёД╨▀Х│╞Е╦╜Ф°┐Х╜╟Ф°┐Х╜╟Х╗≤И▄└ (101.12.9)</a></h3>
+            <h3><a href="download/Г╛╛Д╨▄Е╠├Г╛╛5Ф╛║Г░├Г⌡ёД╨▀Х│╞Е╦╜Ф°┐Х╜╟Ф°┐Х╜╟Г╢─И▄└(Е╜≤).doc">Г╛╛Д╨▄Е╠├Г╛╛5Ф╛║Г░├Г⌡ёД╨▀Х│╞Е╦╜Ф°┐Х╜╟Ф°┐Х╜╟Х╗≤И▄└ (102.8.17)</a></h3>
+            <h3><a href="file:///F|/Ф∙╢Г░├/Е╜╦Ф°┐/И√▀Ф°┐/1021116Г╛╛Д╨▄Е╠├Г╛╛6Ф╛║Г░├Г⌡ёД╨▀Ф°┐Х╜╟/Г╛╛Д╨▄Е╠├Г╛╛6Ф╛║Г░├Г⌡ёД╨▀Х│╞Е╦╜Ф°┐Х╜╟Ф°┐Х╜╟Г╢─И▄└(Е╜≤).doc">Г╛╛Д╨▄Е╠├Г╛╛6Ф╛║Г░├Г⌡ёД╨▀Х│╞Е╦╜Ф°┐Х╜╟Ф°┐Х╜╟Х╗≤И▄└ (102.11.16)</a></h3>
+            <h3><a href="download/Г╛╛Д╨▄Е╠├Г╛╛5Ф╛║Г░├Г⌡ёД╨▀Х│╞Е╦╜Ф°┐Х╜╟Ф°┐Х╜╟Г╢─И▄└(Е╜≤).doc">Г╛╛Д╨▄Е╠├Г╛╛7Ф╛║Г░├Г⌡ёД╨▀Х│╞Е╦╜Ф°┐Х╜╟Ф°┐Х╜╟Х╗≤И▄└ (102.12.21)</a></h3>
+            <h3><a href="download/Г╛╛Д╨▄Е╠├Г╛╛5Ф╛║Г░├Г⌡ёД╨▀Х│╞Е╦╜Ф°┐Х╜╟Ф°┐Х╜╟Г╢─И▄└(Е╜≤).doc">Г╛╛Д╨▄Е╠├Г╛╛8Ф╛║Г░├Г⌡ёД╨▀Х│╞Е╦╜Ф°┐Х╜╟Ф°┐Х╜╟Х╗≤И▄└ (103.6.14)</a></h3>
+            <h3><a href="download/Г╛╛Д╨▄Е╠├Г╛╛5Ф╛║Г░├Г⌡ёД╨▀Х│╞Е╦╜Ф°┐Х╜╟Ф°┐Х╜╟Г╢─И▄└(Е╜≤).doc">Г╛╛Д╨▄Е╠├Г╛╛9Ф╛║Г░├Г⌡ёД╨▀Х│╞Е╦╜Ф°┐Х╜╟Ф°┐Х╜╟Х╗≤И▄└ (103.11.30)</a></h3>
+            <h3><a href="download/Г╛╛Д╨▄Е╠├Г╛╛5Ф╛║Г░├Г⌡ёД╨▀Х│╞Е╦╜Ф°┐Х╜╟Ф°┐Х╜╟Г╢─И▄└(Е╜≤).doc">Г╛╛Д╦┴Е╠├Г╛╛1Ф╛║Г░├Г⌡ёД╨▀Х│╞Е╦╜Ф°┐Х╜╟Ф°┐Х╜╟Х╗≤И▄└ (103.12.21)</a></h3>
             <p>&nbsp;</p>
           </form>
         <!-- InstanceEndEditable --></td>
@@ -186,8 +186,8 @@ a:active {
     </table></td>
   </tr>
   <tr bgcolor="#6699FF">
-    <td align="center" bgcolor="#FFFFCC"><p>╙ю╧н╙k╓H╓╓╣ь╜╧╚~╕M╝`╓ю╙R╩P╜╚бI╨ч╗Н╗t╡н╬г╥|</p>
-    <p>╕a╖}:81167╟╙╤╞╔╚╥ё╠Й╟о╥Г╚л╦Т60-2╦╧  ╧q╦э:07-3633256 ╤г╞u:07-3661272</p>
+    <td align="center" bgcolor="#FFFFCC"><p>Г╓╬Е°≤ФЁ∙Д╨╨Д╦╜Х▐╞Иё÷Е⌠│Е█╠Е╝ЁЕ┬├Ф·░Х┬┤И┤█И╩·Г╝║Е┬╤ГЁ╩Г╣╠Е╜╦Ф°┐</p>
+    <p>Е°╟Е²─:81167И╚≤И⌡└Е╦┌Ф╔═Ф╒⌠Е█─Г▒·Е╠▐Х╥╞60-2Х≥÷  И⌡╩Х╘╠:07-3633256 Е┌ЁГ°÷:07-3661272</p>
 <p>E-mail:haccp.tw@msa.hinet.net</p></td>
   </tr>
 </table>
