--- a/download.htm
+++ b/download.htm
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=big5" />
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>¤¤µØ­¹«~¦M®`¤ÀªR»P­«ÂIºÞ¨î¨t²Î¾Ç·|</title>
+<title>ä¸­è¯é£Ÿå“å±å®³åˆ†æžèˆ‡é‡é»žç®¡åˆ¶ç³»çµ±å­¸æœƒ</title>
 <!-- InstanceEndEditable -->
 <script type="text/javascript">
 <!--
@@ -50,7 +50,7 @@ font-family:"Times New Roman","serif";
 <style type="text/css">
 <!--
 body,td,th {
-	font-family: ¼Ð·¢Åé;
+	font-family: æ¨™æ¥·é«”;
 	font-size: 18px;
 }
 h1 {
@@ -61,7 +61,7 @@ h4 {
 	font-size: 1em;
 }
 a {
-	font-family: ¼Ð·¢Åé;
+	font-family: æ¨™æ¥·é«”;
 	color: #00F;
 }
 a:hover {
@@ -102,10 +102,10 @@ a:active {
       </tr>
       <tr>
         <td colspan="2">&nbsp;</td>
-        <td width="188" align="center"><a href="index.htm">¦^­º­¶</a></td>
-        <td width="188" align="center"><a href="member.htm">·|­û±M°Ï</a></td>
-        <td width="188" align="center"><a href="navigation.htm">ºô¯¸¾ÉÄý</a></td>
-        <td width="150" align="center"><a href="traffic.htm">¥æ³q¸ê°T</a></td>
+        <td width="188" align="center"><a href="index.htm">å›žé¦–é </a></td>
+        <td width="188" align="center"><a href="member.htm">æœƒå“¡å°ˆå€</a></td>
+        <td width="188" align="center"><a href="navigation.htm">ç¶²ç«™å°Žè¦½</a></td>
+        <td width="150" align="center"><a href="traffic.htm">äº¤é€šè³‡è¨Š</a></td>
       </tr>
       <tr>
         <td colspan="6"><hr /></td>
@@ -128,22 +128,22 @@ a:active {
             <td align="center"><a href="download.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image9','','images/005-1.jpg',0)"><img src="images/005.jpg" name="Image9" width="104" height="40" border="0" id="Image9" /></a></td>
           </tr>
           <tr>
-            <td align="center"><a href="mailto:haccp.tw@msa.hinet.net?subject=³X«È¨Ó«H"><img src="images/G-bridmail.gif" width="46" height="56" /></a></td>
+            <td align="center"><a href="mailto:haccp.tw@msa.hinet.net?subject=è¨ªå®¢ä¾†ä¿¡"><img src="images/G-bridmail.gif" width="46" height="56" /></a></td>
           </tr>
           <tr>
-            <td align="center"><h5>§ó·s¤é´Á:</h5>
+            <td align="center"><h5>æ›´æ–°æ—¥æœŸ:</h5>
               <h5>
-                <!-- #BeginDate format:Ch2 -->2020¦~3¤ë25¤é <!-- #EndDate -->              
+                <!-- #BeginDate format:Ch2 -->2020å¹´3æœˆ25æ—¥ <!-- #EndDate -->              
                 <br />
               </h5></td>
           </tr>
         </table></td>
-        <td colspan="5" valign="top"><!-- InstanceBeginEditable name="¤º¤å" -->
-          <h5 style="text-indent:28.0pt;; font-family: &quot;¼Ð·¢Åé&quot;; font-size: 14.0pt">&nbsp;</h5>
-          <h5 style="text-indent:28.0pt;; font-family: &quot;¼Ð·¢Åé&quot;; font-size: 14.0pt"><span style="font-family:¼Ð·¢Åé; font-size:14.0pt; "><span class="MsoNormal" style="text-indent:28.0pt;"><a href="download/download2.doc" target="_blank"><img src="images/afile.gif" width="16" height="16" /></a></span></span><span class="MsoNormal" style="text-indent:28.0pt;"><span style="font-family:¼Ð·¢Åé; font-size:14.0pt; "><a href="download/download2.doc" target="_blank">°òÂ¦°V½m¯Z(60A)½Òµ{ªí</a></span></span></h5>
-<h5 class="MsoNormal" style="text-indent:28.0pt;"><span style="font-family:¼Ð·¢Åé; font-size:14.0pt; "><span class="MsoNormal" style="text-indent:28.0pt;"><a href="download/download3.doc" target="_blank"><img src="images/afile.gif" width="16" height="16" /></a></span><a href="download/download3.doc" target="_blank">¶i¶¥°V½m¯Z(60B)½Òµ{ªí</a></span></h5>
-          <p style="text-indent:28.0pt;"><span style="font-family:¼Ð·¢Åé; font-size:14.0pt; "><span class="MsoNormal" style="text-indent:28.0pt;"><a href="download/p.a1.doc" target="_blank"><img src="images/afile.gif" width="16" height="16" /></a></span><a href="download/p.a1.doc" target="_blank"><strong>­Ó¤H·|­û¥Ó½Ðªí</strong></a></span></p>
-          <p style="text-indent:28.0pt;"><span style="font-family:¼Ð·¢Åé; font-size:14.0pt; "><span class="MsoNormal" style="text-indent:28.0pt;"><a href="download/p.a1.doc" target="_blank"><img src="images/afile.gif" width="16" height="16" /></a></span><a href="download/p.a2.doc" target="_blank"><strong>¹ÎÅé·|­û¥Ó½Ðªí</strong></a></span>          </p>
+        <td colspan="5" valign="top"><!-- InstanceBeginEditable name="å…§æ–‡" -->
+          <h5 style="text-indent:28.0pt;; font-family: &quot;æ¨™æ¥·é«”&quot;; font-size: 14.0pt">&nbsp;</h5>
+          <h5 style="text-indent:28.0pt;; font-family: &quot;æ¨™æ¥·é«”&quot;; font-size: 14.0pt"><span style="font-family:æ¨™æ¥·é«”; font-size:14.0pt; "><span class="MsoNormal" style="text-indent:28.0pt;"><a href="download/download2.doc" target="_blank"><img src="images/afile.gif" width="16" height="16" /></a></span></span><span class="MsoNormal" style="text-indent:28.0pt;"><span style="font-family:æ¨™æ¥·é«”; font-size:14.0pt; "><a href="download/download2.doc" target="_blank">åŸºç¤Žè¨“ç·´ç­(60A)èª²ç¨‹è¡¨</a></span></span></h5>
+<h5 class="MsoNormal" style="text-indent:28.0pt;"><span style="font-family:æ¨™æ¥·é«”; font-size:14.0pt; "><span class="MsoNormal" style="text-indent:28.0pt;"><a href="download/download3.doc" target="_blank"><img src="images/afile.gif" width="16" height="16" /></a></span><a href="download/download3.doc" target="_blank">é€²éšŽè¨“ç·´ç­(60B)èª²ç¨‹è¡¨</a></span></h5>
+          <p style="text-indent:28.0pt;"><span style="font-family:æ¨™æ¥·é«”; font-size:14.0pt; "><span class="MsoNormal" style="text-indent:28.0pt;"><a href="download/p.a1.doc" target="_blank"><img src="images/afile.gif" width="16" height="16" /></a></span><a href="download/p.a1.doc" target="_blank"><strong>å€‹äººæœƒå“¡ç”³è«‹è¡¨</strong></a></span></p>
+          <p style="text-indent:28.0pt;"><span style="font-family:æ¨™æ¥·é«”; font-size:14.0pt; "><span class="MsoNormal" style="text-indent:28.0pt;"><a href="download/p.a1.doc" target="_blank"><img src="images/afile.gif" width="16" height="16" /></a></span><a href="download/p.a2.doc" target="_blank"><strong>åœ˜é«”æœƒå“¡ç”³è«‹è¡¨</strong></a></span>          </p>
           <p style="text-indent:28.0pt;">&nbsp;</p>
           <p style="text-indent:28.0pt;">&nbsp;</p>
 <p style="text-indent:28.0pt;">&nbsp;</p>
@@ -156,8 +156,8 @@ a:active {
     </table></td>
   </tr>
   <tr bgcolor="#6699FF">
-    <td align="center" bgcolor="#FFFFCC"><p>ªÀ¹Îªk¤H¤¤µØ­¹«~¦M®`¤ÀªR»P­«ÂIºÞ¨î¨t²Î¾Ç·|</p>
-    <p>¦a§}<a href="¥X¯²ºñ¤tÀu½è®M©Ð ªñ¥x¤¤¤õ¨®¯¸.htm">:</a>81167°ª¶¯¥«·£±ê°Ï·ç«Ì¸ô60<a href="¥X¯²ºñ¤tÀu½è®M©Ð ªñ¥x¤¤¤õ¨®¯¸.pdf">-</a>2¸¹  ¹q¸Ü<a href="¥X¯²ºñ¤tÀu½è®M©Ð ªñ¥x¤¤¤õ¨®¯¸.pdf">:</a>07-3633256 ¶Ç¯u<a href="¥X¯²ºñ¤tÀu½è®M©Ð ªñ¥x¤¤¤õ¨®¯¸.htm">:</a>07-3661272</p>
+    <td align="center" bgcolor="#FFFFCC"><p>ç¤¾åœ˜æ³•äººä¸­è¯é£Ÿå“å±å®³åˆ†æžèˆ‡é‡é»žç®¡åˆ¶ç³»çµ±å­¸æœƒ</p>
+    <p>åœ°å€<a href="å‡ºç§Ÿç¶ å·å„ªè³ªå¥—æˆ¿ è¿‘å°ä¸­ç«è»Šç«™.htm">:</a>81167é«˜é›„å¸‚æ¥ æ¢“å€ç‘žå±è·¯60<a href="å‡ºç§Ÿç¶ å·å„ªè³ªå¥—æˆ¿ è¿‘å°ä¸­ç«è»Šç«™.pdf">-</a>2è™Ÿ  é›»è©±<a href="å‡ºç§Ÿç¶ å·å„ªè³ªå¥—æˆ¿ è¿‘å°ä¸­ç«è»Šç«™.pdf">:</a>07-3633256 å‚³çœŸ<a href="å‡ºç§Ÿç¶ å·å„ªè³ªå¥—æˆ¿ è¿‘å°ä¸­ç«è»Šç«™.htm">:</a>07-3661272</p>
 <p>E<a href="Untitled--591.htm">-</a>mail:haccp.tw@msa.hinet.net</p></td>
   </tr>
 </table>
