--- a/member3.htm
+++ b/member3.htm
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=big5" />
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>¤¤µØ­¹«~¦M®`¤ÀªR»P­«ÂIºÞ¨î¨t²Î¾Ç·|</title>
+<title>ä¸­è¯é£Ÿå“å±å®³åˆ†æžèˆ‡é‡é»žç®¡åˆ¶ç³»çµ±å­¸æœƒ</title>
 <!-- InstanceEndEditable -->
 <script type="text/javascript">
 <!--
@@ -55,26 +55,26 @@ a:active {
 </style><style type="text/css">
 <!--
 body,td,th {
-	font-family: ¼Ð·¢Åé;
+	font-family: æ¨™æ¥·é«”;
 }
 -->
 </style><style type="text/css">
 <!--
 a {
-	font-family: ¼Ð·¢Åé;
+	font-family: æ¨™æ¥·é«”;
 }
 -->
 </style><style type="text/css">
 <!--
 h1,h2,h3,h4,h5,h6 {
-	font-family: ¼Ð·¢Åé;
+	font-family: æ¨™æ¥·é«”;
 }
 -->
 </style><!-- InstanceEndEditable -->
 <style type="text/css">
 <!--
 body,td,th {
-	font-family: ¼Ð·¢Åé;
+	font-family: æ¨™æ¥·é«”;
 	font-size: 18px;
 }
 h1 {
@@ -85,7 +85,7 @@ h4 {
 	font-size: 1em;
 }
 a {
-	font-family: ¼Ð·¢Åé;
+	font-family: æ¨™æ¥·é«”;
 	color: #00F;
 }
 a:hover {
@@ -126,10 +126,10 @@ a:active {
       </tr>
       <tr>
         <td colspan="2">&nbsp;</td>
-        <td width="188" align="center"><a href="index.htm">¦^­º­¶</a></td>
-        <td width="188" align="center"><a href="member.htm">·|­û±M°Ï</a></td>
-        <td width="188" align="center"><a href="navigation.htm">ºô¯¸¾ÉÄý</a></td>
-        <td width="150" align="center"><a href="traffic.htm">¥æ³q¸ê°T</a></td>
+        <td width="188" align="center"><a href="index.htm">å›žé¦–é </a></td>
+        <td width="188" align="center"><a href="member.htm">æœƒå“¡å°ˆå€</a></td>
+        <td width="188" align="center"><a href="navigation.htm">ç¶²ç«™å°Žè¦½</a></td>
+        <td width="150" align="center"><a href="traffic.htm">äº¤é€šè³‡è¨Š</a></td>
       </tr>
       <tr>
         <td colspan="6"><hr /></td>
@@ -152,21 +152,21 @@ a:active {
             <td align="center"><a href="download.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image9','','images/005-1.jpg',0)"><img src="images/005.jpg" name="Image9" width="104" height="40" border="0" id="Image9" /></a></td>
           </tr>
           <tr>
-            <td align="center"><a href="mailto:haccp.tw@msa.hinet.net?subject=³X«È¨Ó«H"><img src="images/G-bridmail.gif" width="46" height="56" /></a></td>
+            <td align="center"><a href="mailto:haccp.tw@msa.hinet.net?subject=è¨ªå®¢ä¾†ä¿¡"><img src="images/G-bridmail.gif" width="46" height="56" /></a></td>
           </tr>
           <tr>
-            <td align="center"><h5>§ó·s¤é´Á:</h5>
+            <td align="center"><h5>æ›´æ–°æ—¥æœŸ:</h5>
               <h5>
-                <!-- #BeginDate format:Ch2 -->2020¦~4¤ë17¤é <!-- #EndDate -->              
+                <!-- #BeginDate format:Ch2 -->2020å¹´4æœˆ17æ—¥ <!-- #EndDate -->              
                 <br />
               </h5></td>
           </tr>
         </table></td>
-        <td colspan="5" valign="top"><!-- InstanceBeginEditable name="¤º¤å" -->
+        <td colspan="5" valign="top"><!-- InstanceBeginEditable name="å…§æ–‡" -->
           <form id="form1" onsubmit="return FieldCheck(this);" method="post" name="form1" action="./?&amp;m=99&amp;m1=4&amp;m2=220&amp;gp=&amp;sid=">
-            <h2>·|­û¥Nªí¤j·|·|Ä³°O¿ý</h2>
-            <h3><a href="download/²Ä¤G©¡²Ä1¦¸·|­û¥Nªí¤j·|·|Ä³·|Ä³°O¿ý.doc">²Ä¤G©¡²Ä1¦¸·|­û¥Nªí¤j·|·|Ä³°O¿ý(100.10.1)</a></h3>
-            <h3><a href="download/²Ä¤G©¡²Ä2¦¸·|­û¥Nªí¤j·|·|Ä³·|Ä³°O¿ý (1).doc">²Ä¤G©¡²Ä2¦¸·|­û¥Nªí¤j·|·|Ä³°O¿ý(101.12.23)</a></h3>
+            <h2>æœƒå“¡ä»£è¡¨å¤§æœƒæœƒè­°è¨˜éŒ„</h2>
+            <h3><a href="download/ç¬¬äºŒå±†ç¬¬1æ¬¡æœƒå“¡ä»£è¡¨å¤§æœƒæœƒè­°æœƒè­°è¨˜éŒ„.doc">ç¬¬äºŒå±†ç¬¬1æ¬¡æœƒå“¡ä»£è¡¨å¤§æœƒæœƒè­°è¨˜éŒ„(100.10.1)</a></h3>
+            <h3><a href="download/ç¬¬äºŒå±†ç¬¬2æ¬¡æœƒå“¡ä»£è¡¨å¤§æœƒæœƒè­°æœƒè­°è¨˜éŒ„ (1).doc">ç¬¬äºŒå±†ç¬¬2æ¬¡æœƒå“¡ä»£è¡¨å¤§æœƒæœƒè­°è¨˜éŒ„(101.12.23)</a></h3>
             <p>&nbsp;</p>
             <p>&nbsp;</p>
             <p>&nbsp;</p>
@@ -181,8 +181,8 @@ a:active {
     </table></td>
   </tr>
   <tr bgcolor="#6699FF">
-    <td align="center" bgcolor="#FFFFCC"><p>ªÀ¹Îªk¤H¤¤µØ­¹«~¦M®`¤ÀªR»P­«ÂIºÞ¨î¨t²Î¾Ç·|</p>
-    <p>¦a§}:81167°ª¶¯¥«·£±ê°Ï·ç«Ì¸ô60-2¸¹  ¹q¸Ü:07-3633256 ¶Ç¯u:07-3661272</p>
+    <td align="center" bgcolor="#FFFFCC"><p>ç¤¾åœ˜æ³•äººä¸­è¯é£Ÿå“å±å®³åˆ†æžèˆ‡é‡é»žç®¡åˆ¶ç³»çµ±å­¸æœƒ</p>
+    <p>åœ°å€:81167é«˜é›„å¸‚æ¥ æ¢“å€ç‘žå±è·¯60-2è™Ÿ  é›»è©±:07-3633256 å‚³çœŸ:07-3661272</p>
 <p>E-mail:haccp.tw@msa.hinet.net</p></td>
   </tr>
 </table>
