--- a/traffic.htm
+++ b/traffic.htm
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=big5" />
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>HACCP¤¤µØ­¹«~¦M®`¤ÀªR»P­«ÂIºÞ¨î¨t²Î¾Ç·|</title>
+<title>HACCPä¸­è¯é£Ÿå“å±å®³åˆ†æžèˆ‡é‡é»žç®¡åˆ¶ç³»çµ±å­¸æœƒ</title>
 <!-- InstanceEndEditable -->
 <script type="text/javascript">
 <!--
@@ -38,17 +38,17 @@ function MM_swapImage() { //v3.0
 <style type="text/css">
 <!--
 a {
-	font-family: ¼Ð·¢Åé;
+	font-family: æ¨™æ¥·é«”;
 }
 h1,h2,h3,h4,h5,h6 {
-	font-family: ¼Ð·¢Åé;
+	font-family: æ¨™æ¥·é«”;
 }
 -->
 </style><!-- InstanceEndEditable -->
 <style type="text/css">
 <!--
 body,td,th {
-	font-family: ¼Ð·¢Åé;
+	font-family: æ¨™æ¥·é«”;
 	font-size: 18px;
 }
 h1 {
@@ -59,7 +59,7 @@ h4 {
 	font-size: 1em;
 }
 a {
-	font-family: ¼Ð·¢Åé;
+	font-family: æ¨™æ¥·é«”;
 	color: #00F;
 }
 a:hover {
@@ -100,10 +100,10 @@ a:active {
       </tr>
       <tr>
         <td colspan="2">&nbsp;</td>
-        <td width="188" align="center"><a href="index.htm">¦^­º­¶</a></td>
-        <td width="188" align="center"><a href="member.htm">·|­û±M°Ï</a></td>
-        <td width="188" align="center"><a href="navigation.htm">ºô¯¸¾ÉÄý</a></td>
-        <td width="150" align="center"><a href="traffic.htm">¥æ³q¸ê°T</a></td>
+        <td width="188" align="center"><a href="index.htm">å›žé¦–é </a></td>
+        <td width="188" align="center"><a href="member.htm">æœƒå“¡å°ˆå€</a></td>
+        <td width="188" align="center"><a href="navigation.htm">ç¶²ç«™å°Žè¦½</a></td>
+        <td width="150" align="center"><a href="traffic.htm">äº¤é€šè³‡è¨Š</a></td>
       </tr>
       <tr>
         <td colspan="6"><hr /></td>
@@ -126,29 +126,29 @@ a:active {
             <td align="center"><a href="download.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image9','','images/005-1.jpg',0)"><img src="images/005.jpg" name="Image9" width="104" height="40" border="0" id="Image9" /></a></td>
           </tr>
           <tr>
-            <td align="center"><a href="mailto:haccp.tw@msa.hinet.net?subject=³X«È¨Ó«H"><img src="images/G-bridmail.gif" width="46" height="56" /></a></td>
+            <td align="center"><a href="mailto:haccp.tw@msa.hinet.net?subject=è¨ªå®¢ä¾†ä¿¡"><img src="images/G-bridmail.gif" width="46" height="56" /></a></td>
           </tr>
           <tr>
-            <td align="center"><h5>§ó·s¤é´Á:</h5>
+            <td align="center"><h5>æ›´æ–°æ—¥æœŸ:</h5>
               <h5>
-                <!-- #BeginDate format:Ch2 -->2020¦~4¤ë17¤é <!-- #EndDate -->              
+                <!-- #BeginDate format:Ch2 -->2020å¹´4æœˆ17æ—¥ <!-- #EndDate -->              
                 <br />
               </h5></td>
           </tr>
         </table></td>
-        <td colspan="5" valign="top"><!-- InstanceBeginEditable name="¤º¤å" -->
-          <h2>¥æ³q¸ê°T</h2>
-          <h4>¾Ç·|·|§}¡G°ª¶¯¥«·£±ê°Ï·ç«Ì¸ô60-2¸¹</h4>
-          <h4>¥æ³q¸ê°T¡G<br />
+        <td colspan="5" valign="top"><!-- InstanceBeginEditable name="å…§æ–‡" -->
+          <h2>äº¤é€šè³‡è¨Š</h2>
+          <h4>å­¸æœƒæœƒå€ï¼šé«˜é›„å¸‚æ¥ æ¢“å€ç‘žå±è·¯60-2è™Ÿ</h4>
+          <h4>äº¤é€šè³‡è¨Šï¼š<br />
             </h4>
-          <h4>¥_¤W¡G</h4>
-          <h4>1.¤½¸ô¡G·£±ê¥æ¬y¹D-&gt;¤U¤¯ªZ-&gt;¬õºñ¿O¥ªÂà(©¹·£±ê)-&gt;ª½¦æ¦Ü·£¶§¸ô¥ªÂà-&gt;¤W·£¶§¸ô¾ô-&gt;¤U¸ô¾ôª½¦æ-&gt;·ç«Ì¸ô(¦n¼Ö­}KTV)¥kÂà-&gt;(¯ù¤§Å]¤â¥k°¼)</h4>
-          <h4>            2.¤õ¨®¡G·s¥ªÀç¯¸¤U¨®-&gt;Âà·fR16¥ªÀç±¶¹B¯¸-&gt;¦ÜR20«á«l¯¸¤U¨®-&gt;¨B¦æ¬ù100¤½¤Ø <br />
+          <h4>åŒ—ä¸Šï¼š</h4>
+          <h4>1.å…¬è·¯ï¼šæ¥ æ¢“äº¤æµé“-&gt;ä¸‹ä»æ­¦-&gt;ç´…ç¶ ç‡ˆå·¦è½‰(å¾€æ¥ æ¢“)-&gt;ç›´è¡Œè‡³æ¥ é™½è·¯å·¦è½‰-&gt;ä¸Šæ¥ é™½è·¯æ©‹-&gt;ä¸‹è·¯æ©‹ç›´è¡Œ-&gt;ç‘žå±è·¯(å¥½æ¨‚è¿ªKTV)å³è½‰-&gt;(èŒ¶ä¹‹é­”æ‰‹å³å´)</h4>
+          <h4>            2.ç«è»Šï¼šæ–°å·¦ç‡Ÿç«™ä¸‹è»Š-&gt;è½‰æ­R16å·¦ç‡Ÿæ·é‹ç«™-&gt;è‡³R20å¾Œå‹ç«™ä¸‹è»Š-&gt;æ­¥è¡Œç´„100å…¬å°º <br />
           </h4>
-          <h4>«n¤U¡G</h4>
-          <h4>1.¤½¸ô¡G·£±ê¥æ¬y¹D-&gt;¤U¤jªÀ(¦³2­Ó¥X¤f)-&gt;²Ä2­Ó¬õºñ¿O·£¶§¸ô¥kÂà-&gt;¤W·£¶§¸ô¾ô-&gt;¤U¸ô¾ôª½¦æ-&gt;·ç«Ì¸ô(¦n¼Ö­}KTV)¥kÂà-&gt;(¯ù¤§Å]¤â¥k°¼) <br />
-            2.¤õ¨®¡G¾ôÀY¤õ¨®¯¸¤U¨®-&gt;Âà·fR23¾ôÀY±¶¹B¯¸-&gt;¦ÜR20«á«l¯¸¤U¨®-&gt;¨B¦æ¬ù100¤½¤Ø <br />
-            3.°ªÅK¡G°ª¶¯¥ªÀç¯¸¤U¨®-&gt;Âà·fR16¥ªÀç±¶¹B¯¸-&gt;¦ÜR20«á«l¯¸¤U¨®-&gt;¨B¦æ¬ù100¤½¤Ø</h4>
+          <h4>å—ä¸‹ï¼š</h4>
+          <h4>1.å…¬è·¯ï¼šæ¥ æ¢“äº¤æµé“-&gt;ä¸‹å¤§ç¤¾(æœ‰2å€‹å‡ºå£)-&gt;ç¬¬2å€‹ç´…ç¶ ç‡ˆæ¥ é™½è·¯å³è½‰-&gt;ä¸Šæ¥ é™½è·¯æ©‹-&gt;ä¸‹è·¯æ©‹ç›´è¡Œ-&gt;ç‘žå±è·¯(å¥½æ¨‚è¿ªKTV)å³è½‰-&gt;(èŒ¶ä¹‹é­”æ‰‹å³å´) <br />
+            2.ç«è»Šï¼šæ©‹é ­ç«è»Šç«™ä¸‹è»Š-&gt;è½‰æ­R23æ©‹é ­æ·é‹ç«™-&gt;è‡³R20å¾Œå‹ç«™ä¸‹è»Š-&gt;æ­¥è¡Œç´„100å…¬å°º <br />
+            3.é«˜éµï¼šé«˜é›„å·¦ç‡Ÿç«™ä¸‹è»Š-&gt;è½‰æ­R16å·¦ç‡Ÿæ·é‹ç«™-&gt;è‡³R20å¾Œå‹ç«™ä¸‹è»Š-&gt;æ­¥è¡Œç´„100å…¬å°º</h4>
           <p>&nbsp;</p>
           <p>&nbsp;</p>
         <!-- InstanceEndEditable --></td>
@@ -159,8 +159,8 @@ a:active {
     </table></td>
   </tr>
   <tr bgcolor="#6699FF">
-    <td align="center" bgcolor="#FFFFCC"><p>ªÀ¹Îªk¤H¤¤µØ­¹«~¦M®`¤ÀªR»P­«ÂIºÞ¨î¨t²Î¾Ç·|</p>
-    <p>¦a§}:81167°ª¶¯¥«·£±ê°Ï·ç«Ì¸ô60-2¸¹  ¹q¸Ü:07-3633256 ¶Ç¯u:07-3661272</p>
+    <td align="center" bgcolor="#FFFFCC"><p>ç¤¾åœ˜æ³•äººä¸­è¯é£Ÿå“å±å®³åˆ†æžèˆ‡é‡é»žç®¡åˆ¶ç³»çµ±å­¸æœƒ</p>
+    <p>åœ°å€:81167é«˜é›„å¸‚æ¥ æ¢“å€ç‘žå±è·¯60-2è™Ÿ  é›»è©±:07-3633256 å‚³çœŸ:07-3661272</p>
 <p>E-mail:haccp.tw@msa.hinet.net</p></td>
   </tr>
 </table>
