--- a/education.htm
+++ b/education.htm
@@ -171,7 +171,7 @@ a:active {
           <tr>
             <td align="center"><h5>更新日期:</h5>
               <h5>
-                <!-- #BeginDate format:Ch2 -->2025年1月24日 <!-- #EndDate -->              
+                <!-- #BeginDate format:Ch2 -->2025年2月2日 <!-- #EndDate -->              
                 <br />
               </h5></td>
           </tr>
@@ -232,7 +232,7 @@ a:active {
           <p class="MsoNormal" style="text-indent:28.0pt;"><span style="font-family:標楷體; font-size:14.0pt; ">E-mail</span><span style="font-family:標楷體; font-size:14.0pt; ">：</span><a href="mailto:haccp.tw@msa.hinet.net"><span style="font-family:標楷體; font-size:14.0pt; ">haccp.tw@msa.hinet.net</span></a><span style="font-family:標楷體; font-size:14.0pt; "> </span></p>
           <p class="MsoNormal" style="text-indent:28.0pt;"><span style="font-family:標楷體; font-size:14.0pt; ">聯絡人:謝文心 小姐 </span></p>
           <h5 style="text-indent:28.0pt;; font-family: &quot;標楷體&quot;; font-size: 14.0pt"><span class="MsoNormal"><a href="download/HACCP.doc" target="_blank"><img src="images/afile.gif" width="16" height="16" /></a></span><a href="HACCP10804.doc">招生簡章</a></h5>
-          <h5 style="text-indent:28.0pt;; font-family: &quot;標楷體&quot;; font-size: 14.0pt"><span class="MsoNormal"><span style="font-family:標楷體; font-size:14.0pt; "><a href="download/download1.doc" target="_blank"><img src="images/afile.gif" width="16" height="16" /></a></span></span><span style="font-family:標楷體; font-size:14.0pt; "><span style="text-indent:28.0pt;"><a href="http://www.haccp.org.tw/">附件1 報名單</a></span></span></h5>
+          <h5 style="text-indent:28.0pt;; font-family: &quot;標楷體&quot;; font-size: 14.0pt"><span class="MsoNormal"><span style="font-family:標楷體; font-size:14.0pt; "><a href="download/download1.doc" target="_blank"><img src="images/afile.gif" width="16" height="16" /></a></span></span><span style="font-family:標楷體; font-size:14.0pt; "><span style="text-indent:28.0pt;"><a href="https://docs.google.com/forms/d/e/1FAIpQLScYEw4_1s-n1udxkYdkgBF0NLg3ZdaBEUGJmQth5qlmY7Iq6g/viewform">附件1 報名單</a></span></span></h5>
           <h5 style="text-indent:28.0pt;; font-family: &quot;標楷體&quot;; font-size: 14.0pt"><a href="haccp.org.tw"><span style="font-family:標楷體; font-size:14.0pt; "><span class="MsoNormal" style="text-indent:28.0pt;"></span></span></a><span style="font-family:標楷體; font-size:14.0pt; "><span class="MsoNormal" style="text-indent:28.0pt;"><a href="download/download2.doc" target="_blank"><img src="images/afile.gif" width="16" height="16" /></a></span></span><span class="MsoNormal" style="text-indent:28.0pt;"><span style="font-family:標楷體; font-size:14.0pt; "><a href="課程表60A第55期-屏科大.doc" target="_blank">附件2 基礎訓練班(60A)課程表</a></span></span></h5>
           <h5 style="text-indent:28.0pt;; font-family: &quot;標楷體&quot;; font-size: 14.0pt"><span style="font-family:標楷體; font-size:14.0pt; "><span class="MsoNormal" style="text-indent:28.0pt;"><a href="download/download3.doc" target="_blank"><img src="images/afile.gif" width="16" height="16" /></a></span><a href="課程表60B第41期-屏科大.docx" target="_blank">附件3 進階訓練班(60B)課程表</a></span>          </h5>
           <p style="text-indent:28.0pt;; font-family: &quot;標楷體&quot;; font-size: 14.0pt">&nbsp;</p>
