--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/temp02.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=big5" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf8" />
 <!-- InstanceBeginEditable name="doctitle" -->
 <title>社團法人中華食品危害分析與重點管制系統學會首頁</title>
 <!-- InstanceEndEditable -->
@@ -171,7 +171,7 @@ a:active {
           <tr>
             <td align="center"><h5>更新日期:</h5>
               <h5>
-                <!-- #BeginDate format:Ch2 -->2025年5月20日 <!-- #EndDate -->              
+                <!-- #BeginDate format:Ch2 -->2025年4月30日 <!-- #EndDate -->              
                 <br />
               </h5></td>
           </tr>
@@ -184,9 +184,6 @@ a:active {
         <td><span style="color: #69F; font-size: 17px; font-family: '標楷體';"><img src="images/101-1.jpg" width="147" height="32" /><span style="color: #F00; font-size: 17px; font-family: '標楷體';"> *請以  <img src="images/untitled01.jpg" width="75" height="31" /> 瀏覽器開啟*</span></span></td>
       </tr>
       <tr>
-        <td style="color: #00F; font-size: 17px; font-family: '標楷體';"><h2><a href="https://docs.google.com/forms/d/e/1FAIpQLSdV-034gHeFcSSkRhCQoEChM6zQK2JARV1UmpPo_aPlBZ9O8Q/viewform">臺南市學校午餐-<strong>餐飲從業人員教育訓練</strong>(臺南市政府教育局專班)</a></h2></td>
-      </tr>
-      <tr>
         <td style="color: #00F; font-size: 17px; font-family: '標楷體';">&nbsp;</td>
       </tr>
       <tr>
@@ -197,9 +194,6 @@ a:active {
       </tr>
       <tr>
         <td style="color: #00F; font-size: 17px; font-family: '標楷體';"><h2><span data-mce-style="font-family: 標楷體;"><strong><a href="https://docs.google.com/forms/d/e/1FAIpQLSfzCq4QuNRfC4oz_zL1u_ZQZOsBkg3mDZnRV1XCqOdBpRLdFA/viewform">114年度食品安全管制系統HACCP持續教育(8小時)訓練班報名</a></strong></span></h2></td>
-      </tr>
-      <tr>
-        <td style="color: #00F; font-size: 17px; font-family: '標楷體';">&nbsp;</td>
       </tr>
       <tr>
         <td style="color: #00F; font-size: 17px; font-family: '標楷體';">&nbsp;</td>
@@ -230,13 +224,13 @@ a:active {
         <td>&nbsp;</td>
       </tr>
       <tr>
-        <td><h2><a href="https://docs.google.com/forms/d/e/1FAIpQLSchMxW2bgkq8L9o4D_QYPf5Ds8UgFr40LVaOCnKKeu431KeDQ/viewform">登記索取下期開課訊息通知(將於開班時寄發E-mail通知)</a></h2></td>
+        <td><h2><a href="https://docs.google.com/forms/d/1RxkE07wrk6EwNyqz7rh_KnGJPw65Sxa1piCGaOlERfY/edit">登記索取下期開課訊息通知(將於開班時寄發E-mail通知)</a></h2></td>
       </tr>
       <tr>
         <td style="color: #00F; font-size: 17px; font-family: '標楷體';">&nbsp;</td>
       </tr>
       <tr>
-        <td style="color: #00F; font-size: 17px; font-family: '標楷體';"><h2><span data-mce-style="font-family: 標楷體;"><strong><a href="https://docs.google.com/forms/d/e/1FAIpQLSfaLwVxreosJ62xDCCAWRCFpsuaxmJO0PK4MLewo3cs6AvOUQ/viewform">113年度食品安全管制系統HACCP基礎訓練班(60A)及進階訓練班(60B)報名</a></strong></span><a href="https://docs.google.com/forms/d/e/1FAIpQLSfaLwVxreosJ62xDCCAWRCFpsuaxmJO0PK4MLewo3cs6AvOUQ/viewform">-屏科大</a></h2></td>
+        <td style="color: #00F; font-size: 17px; font-family: '標楷體';"><h2><span data-mce-style="font-family: 標楷體;"><strong><a href="https://docs.google.com/forms/d/e/1FAIpQLSfaLwVxreosJ62xDCCAWRCFpsuaxmJO0PK4MLewo3cs6AvOUQ/viewform">114年度食品安全管制系統HACCP基礎訓練班(60A)及進階訓練班(60B)報名</a></strong></span><a href="https://docs.google.com/forms/d/e/1FAIpQLSfaLwVxreosJ62xDCCAWRCFpsuaxmJO0PK4MLewo3cs6AvOUQ/viewform">-屏科大</a></h2></td>
       </tr>
       <tr>
         <td style="color: #00F; font-size: 17px; font-family: '標楷體';">&nbsp;</td>
